--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="article_image_preview">Article Image Preview</string>
     <string name="save_article">Save Article</string>
     <string name="status_image">Status Image</string>
+    <string name="search">Search...</string>
 </resources>
